<resources>
    <string name="app_name">FoodStorage</string>
    <string name="shopping_list">Shopping List</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="buy_date">Bought: </string>
    <string name="expiry_date">Expiring: </string>
    <string name="days">days</string>
    <string name="days_ago">days ago</string>
    <string name="dummy_date">xx/xx/xxxx</string>
    <string name="dummy_days">xx</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">SuperMarket Map</string>

    <!-- String extra json -->
    <string name="extra_product">MY_EXTRA_PRODUCT</string>

    <!-- DATA FOR BACKEND  https://foodstorage-sec.herokuapp.com/ or http://192.168.1.2:3000/ -->
    <string name="url_backend">https://foodstorage-sec.herokuapp.com/</string>
    <string name="productAdd">Product</string>
    <string name="listAdd">Shopping Item</string>
    <string name="server_Client_id">172693033491-rbjhj9veqsnr5mlj241sebmrusfea193.apps.googleusercontent.com</string>
    <string name="preference_file_key">loginData</string>
    <string name="welcome_string">Welcome to FoodStorage, your personal pantry assistant. To access the app, please Sign In!</string>

</resources>
